<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D5F80202"
    android:contentDescription="@string/Layoutprincipal"
    tools:context=".Principal">


    <ImageView
        android:id="@+id/imgmanaoshorizontal"
        android:layout_width="0dp"
        android:layout_height="169dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/descripciondeimagenhorizontalmanaos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/manaoshotizontal" />


    <ScrollView
        android:id="@+id/scrollViewprincipal"
        android:layout_width="320dp"
        android:layout_height="159dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:id="@+id/btnlocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#AE4AC380"
                android:text="@string/txtlocation"
                android:textColor="#4A148C"
                android:translationX="0dp"
                app:icon="@drawable/baseline_location_on_24" />

            <Button
                android:id="@+id/btncallus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:backgroundTint="#AE4AC380"
                android:text="@string/btnLlamarnos"
                android:textColor="#4A148C"
                android:translationX="0dp"
                app:icon="@android:drawable/stat_sys_phone_call" />

            <Button
                android:id="@+id/btnwebsite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#AE4AC380"
                android:text="@string/OfficialSite"
                android:textColor="#4A148C"
                app:icon="@drawable/website"
                app:layout_constraintTop_toBottomOf="@+id/btncallus" />


        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/btnprogramador"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginStart="196dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btndescripcionProgramador"
        app:icon="@drawable/ic_dev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />


</androidx.constraintlayout.widget.ConstraintLayout>