<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/desarrolladorfondo"
    tools:context=".Acercade">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgPerfil"
                android:layout_width="357dp"
                android:layout_height="265dp"
                android:contentDescription="@string/imagendesarrollador"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.592"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.236"
                app:srcCompat="@drawable/fotoperfildesarrollo" />

            <TextView
                android:id="@+id/nombredesarrollador"
                android:layout_width="169dp"
                android:layout_height="25dp"
                android:background="#1E5FE1"
                android:text="@string/nombredesarrollador"
                android:textColor="#EDE7F6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.617"
                tools:ignore="TextSizeCheck" />

            <ImageView
                android:id="@+id/logodesarrollador"
                android:layout_width="28dp"
                android:layout_height="27dp"
                android:background="#2196F3"
                android:contentDescription="@string/logodesarrollador"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/nombredesarrollador"
                app:layout_constraintHorizontal_bias="0.831"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.616"
                app:srcCompat="@drawable/desarrollador"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/correo"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="#1E5FE1"
                android:text="@string/correo"
                android:textColor="#F3E5F5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <ImageView
                android:id="@+id/imgCorreo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="#1E5FE1"
                android:contentDescription="@string/imagencorreo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.192"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.699"
                app:srcCompat="@android:drawable/sym_action_email" />


        </LinearLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>